// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render caption 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 1rem;
  padding-top: 0.125rem;
  margin-top: 0;
  margin-bottom: 0.875rem;
  color: #bdbdbd;
  font-family: 'Montserrat',sans-serif;
  font-weight: 300;
}

<h6
  className="c0"
>
  Text
</h6>
`;

exports[`render display 1`] = `
.c0 {
  color: #212121;
  font-size: 3.375rem;
  line-height: 4rem;
  padding-top: 0.75rem;
  margin-top: 0;
  margin-bottom: 0.25rem;
  font-family: 'Montserrat',sans-serif;
  font-weight: 300;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
}

<h1
  className="c0"
>
  Text
</h1>
`;

exports[`render heading 1`] = `
.c0 {
  font-size: 2.25rem;
  line-height: 4rem;
  padding-top: 0.1875rem;
  margin-top: 0;
  margin-bottom: 0.8125rem;
  color: #212121;
  font-family: 'Montserrat',sans-serif;
  font-weight: 400;
  text-transform: uppercase;
}

<h2
  className="c0"
>
  Text
</h2>
`;

exports[`render subheading 1`] = `
.c0 {
  font-size: 1.5rem;
  line-height: 2rem;
  padding-top: 0.4375rem;
  margin-top: 0;
  margin-bottom: 0.5625rem;
  color: #212121;
  font-family: 'Montserrat',sans-serif;
  font-weight: 300;
  text-transform: uppercase;
}

<h3
  className="c0"
>
  Text
</h3>
`;

exports[`render text 1`] = `
.c0 {
  font-size: 1rem;
  line-height: 2rem;
  padding-top: 0.625rem;
  margin-top: 0;
  margin-bottom: 0.375rem;
  color: #757575;
  font-family: 'Raleway',sans-serif;
  font-weight: 300;
}

<p
  className="c0"
>
  Text
</p>
`;
